gcc/testsuite/gdc.test/compilable/imports/test21501b.d
module imports.test21501b;
import test21501a;

struct B
{
    A data;
}
