gcc/testsuite/gdc.test/fail_compilation/imports/diag9210b.d
module imports.diag9210b;

import imports.diag9210c;
import imports.diag9210stdcomplex;

interface B : A {}
